@@ -15,18 +15,37 @@ def main():
     s.listen(5)                 # Now wait for client connection.
     print 'Entering infinite loop; hit CTRL-C to exit'
     while True:
-        handle_connection(s)
-
-def handle_connection(coon):
-        # Establish connection with client.    
-        c, (client_host, client_port) = coon.accept()
+        c, (client_host, client_port) = s.accept()
+        
         print 'Got connection from', client_host, client_port
-        c.send('HTTP/1.0 200 OK\r\n')
-        c.send('Content-Type: text/html\r\n')
-        c.send('\r\n')
-        c.send("<h1>Hello,world</h1>")
-        c.send("this is fakestuff's WebServer.")
-        c.close()
+        #Establish connection with client.
+       # url = host + ':' +str(port)
+        handle_connection(c)
+
+def handle_connection(conn):
+        command = conn.recv(1000).split('\r\n')[0].split(' ')[0:2]
+        method = command[0]
+        req = command[1]
+        conn.send('HTTP/1.0 200 OK\r\n')
+        conn.send('Content-type: text/html\r\n')
+        conn.send('\r\n')
+        if method == 'POST':
+           conn.send('<h1>Hello, world.</h1>')
+        elif method == 'GET':
+           if req == '/':
+               conn.send("<h1>Hello, world.</h1>")
+               conn.send("This is fakestuff's Web server.")
+               conn.send("There is a list of 'website' available.<br>")
+               conn.send('<a href= /content>Content</a><br>')
+               conn.send('<a href= /file>File</a><br>')
+               conn.send('<a href= /image>Image</a><br>')
+           if req == '/content':
+               conn.send("This is the content you want to see.")
+           if req == '/file':
+               conn.send("There will be some files in future.")
+           if req == '/image':
+               conn.send("Only most smart guy could see the image. LOL")  
+        conn.close()
 
 if __name__ == '__main__':
     main()
